kubernetes/kafka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --file ../compose.yaml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: kafka
  name: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kafka
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --file ../compose.yaml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/net-bridge: "true"
        io.kompose.service: kafka
    spec:
      containers:
        - args:
            - /project/kafka_2.12-3.4.0/start_kafka.sh
          image: confluentinc/cp-kafka:3.3.3
          name: kafka
          ports:
            - containerPort: 9092
          resources: {}
          volumeMounts:
            - name : project-volume
              mountPath: /project
              readOnly: true
      volumes:
        - name: local-volume
          persistentVolumeClaim:
            claimName: local-pvc
