kubernetes/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --file ../compose.yaml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: mongo
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mongo
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --file ../compose.yaml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/net-bridge: "true"
        io.kompose.service: mongo
    spec:
      containers:
        - image: mongo:4.0
          name: mongo
          ports:
            - containerPort: 27017
          resources: {}
          volumeMounts:
            - name : project-volume
              mountPath: /project
      volumes:
      - name: project-volume
        hostPath:
          path: /home/ibdn/Documents/LAB_final/practica_creativa  # Path on the host machine
          type: Directory       # Ensures it is a directory
      restartPolicy: Always

status: {}
