kubernetes/mongo-seed-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --file ../compose.yaml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: mongo-seed
  name: mongo-seed
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mongo-seed
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --file ../compose.yaml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/net-bridge: "true"
        io.kompose.service: mongo-seed
    spec:
      containers:
        - args:
            - /project/resources/import_distances.sh
            - '&&'
            - echo
            - '[!] DATA IMPORTED!'
          image: mongo:4.0
          name: mongo-seed
          resources: {}
          volumeMounts:
            - name : project-volume
              mountPath: /project
              readOnly: true
      volumes:
        - name: local-volume
          persistentVolumeClaim:
            claimName: local-pvc
