kubernetes/spark-submit-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --file ../compose.yaml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: spark-submit
  name: spark-submit
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: spark-submit
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --file ../compose.yaml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/net-bridge: "true"
        io.kompose.service: spark-submit
    spec:
      containers:
        - args:
            - bash
            - -c
            - sleep 15; /spark/bin/spark-submit --class es.upm.dit.ging.predictor.MakePrediction --master spark://spark-master:7077 --packages org.mongodb.spark:mongo-spark-connector_2.12:10.1.1,org.apache.spark:spark-sql-kafka-0-10_2.12:3.3.0  /project/flight_prediction/target/scala-2.12/flight_prediction_2.12-0.1.jar
          image: bde2020/spark-submit:3.3.0-hadoop3.3
          name: spark-submit
          ports:
            - containerPort: 4040
          resources: {}
          volumeMounts:
            - name : project-volume
              mountPath: /project
              readOnly: true
      volume:
        - name: local-volume
        persistantVolumeClaim:
          claimName: local-pvc
