kubernetes/spark-worker1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --file ../compose.yaml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: spark-worker1
  name: spark-worker1
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: spark-worker1
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --file ../compose.yaml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/net-bridge: "true"
        io.kompose.service: spark-worker1
    spec:
      containers:
        - env:
            - name: INIT_DAEMON_STEP
              value: setup_spark
            - name: SPARK_MASTER
              value: spark://spark-master:7077
            - name: constraint_node
              value: =spark-worker
          image: bde2020/spark-worker:3.3.0-hadoop3.3
          name: spark-worker1
          ports:
            - containerPort: 8081
          resources: {}
          volumeMounts:
            - name : project-volume
              mountPath: /project
              readOnly: true
      volume:
      -name: local-volume
          persistantVolumeClaim:
            claimName: local-pvc
