kubernetes/spark-worker2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --file ../compose.yaml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: spark-worker2
  name: spark-worker2
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: spark-worker2
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --file ../compose.yaml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/net-bridge: "true"
        io.kompose.service: spark-worker2
    spec:
      containers:
        - env:
            - name: SPARK_MASTER
              value: spark://spark-master:7077
            - name: constraint_node
              value: =spark-master
          image: bde2020/spark-worker:3.3.0-hadoop3.3
          name: spark-worker2
          ports:
            - containerPort: 8081
          resources: {}
          volumeMounts:
            - name : project-volume
              mountPath: /project
      volumes:
      - name: project-volume
        hostPath:
          path: /home/marti_costa_mart/Projecte_final_BDFI  # Path on the host machine
          type: Directory       # Ensures it is a directory
      restartPolicy: Always
status: {}
