kubernetes/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --file ../compose.yaml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: web
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --file ../compose.yaml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/net-bridge: "true"
        io.kompose.service: web
    spec:
      containers:
        - args:
            - sh
            - -c
            - ' sleep 30 && python3 /project/resources/web/predict_flask.py'
          image: web
          name: web
          ports:
            - containerPort: 5001
          resources: {}
          volumeMounts:
            - name : project-volume
              mountPath: /project
              readOnly: true
      volumes:
      - name: project-volume
        hostPath:
          path: /home/marti_costa_mart/Projecte_final_BDFI # Path on the host machine
          type: Directory       # Ensures it is a directory
      restartPolicy: Always
status: {}
