kubernetes/zookeeper-kafka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --file ../compose.yaml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: zookeeper-kafka
  name: zookeeper-kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: zookeeper-kafka
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --file ../compose.yaml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/net-bridge: "true"
        io.kompose.service: zookeeper-kafka
    spec:
      containers:
        - env:
            - name: ZOOKEEPER_CLIENT_PORT
              value: "2181"
          image: confluentinc/cp-zookeeper:latest
          name: kfk-zookeeper
          ports:
            - containerPort: 2181
          resources: {}
      restartPolicy: Always
status: {}
