kubernetes/spark-master-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --file ../compose.yaml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: spark-master
  name: spark-master
spec:
  ports:
    - name: "7077"
      port: 7077
      targetPort: 7077
    - name: "9001"
      port: 9001
      targetPort: 9001
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: spark-master
status:
  loadBalancer: {}
