kubernetes/spark-submit-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --file ../compose.yaml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: spark-submit
  name: spark-submit
spec:
  ports:
    - name: "4040"
      port: 4040
      targetPort: 4040
  selector:
    io.kompose.service: spark-submit
status:
  loadBalancer: {}
