kubernetes/spark-worker2-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --file ../compose.yaml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: spark-worker2
  name: spark-worker2
spec:
  ports:
    - name: "8082"
      port: 8082
      targetPort: 8081
  selector:
    io.kompose.service: spark-worker2
status:
  loadBalancer: {}
