kubernetes/net-bridge-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: net-bridge
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/net-bridge: "true"
  podSelector:
    matchLabels:
      io.kompose.network/net-bridge: "true"
